--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -18,7 +18,7 @@ const contactPlatforms: Array<ContactItem> = [
             calidad y acabados</span
         >
          pensando en la <span class="text-offset">comodidad</span> de nuestros
-        clientes
+        clientes.
     </Fragment>
     <ContactInfo items={contactPlatforms} />
 </ContentSection>
