--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -2,7 +2,7 @@
   --color-primary: #000;
   --color-secondary: theme("colors.indigo.500");
   --color-text: theme("colors.gray.900");
-  --color-text-offset: #8A7C7C;
+  --color-text-offset: #443c3c;
   --color-text-accent: theme("colors.gray.50");
   --color-background: #F6F6F6;
   --color-background-offset: #FFF;
