--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,6 +64,8 @@ const description =
           }
         });
     </script>
+    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"
+    ></script>
   </head>
   <body
     class="h-full overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-white"
