--- a/src/components/content-section.astro
+++ b/src/components/content-section.astro
@@ -5,14 +5,18 @@ export interface Props {
   id: string;
   // optional
   title?: string;
+  position?: 'start' | 'end';
 }
 
-const { title, id } = Astro.props;
+const { title, id, position } = Astro.props;
+
+const positionClass =
+  position === undefined ? 'items-center' : `items-${position}`;
 ---
 
 <section
   id={id}
-  class="flex scroll-mt-24 flex-col items-center gap-4 space-y-8"
+  class={`flex scroll-mt-24 flex-col gap-4 space-y-8 ${positionClass}`}
 >
   {
     (title && (
