--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,8 +4,8 @@ import ThemeSwitcher from '~/components/theme-switcher.astro';
 import type { NavItem } from '~/types';
 
 const navItems: Array<NavItem> = [
-  { title: 'Catálogo', url: '#catalogue' },
-  { title: 'Contacto', url: '#contact' },
+  { title: 'Catálogo', url: '/#catalogue' },
+  { title: 'Contacto', url: '/#contact' },
 ];
 
 // old class for header when splash is active
