--- a/src/components/price_section.astro
+++ b/src/components/price_section.astro
@@ -3,20 +3,40 @@ export interface Props {
     price: number;
     discount: number;
     customClass?: string;
+    compress?: boolean;
 }
 
-const { price, discount, customClass } = Astro.props;
+const { price, discount, customClass, compress } = Astro.props;
 ---
 
 <section class={customClass || 'flex w-full space-x-1'}>
-    <p
-        class={`${
-            discount ? 'line-through' : ''
-        } font-bold text-currency text-base`}
-    >
-        S/ {price % 1 === 0 ? price + '.00' : price.toFixed(2)}
-    </p>
-    <p class="font-bold text-currencyDiscount text-base">
-        {discount ? ' - ' + (price - (price * discount) / 100).toFixed(2) : ''}
-    </p>
+    {
+        compress == undefined || !compress ? (
+            <>
+                <p
+                    class={`${
+                        discount ? 'line-through' : ''
+                    } font-bold text-currency text-base`}
+                >
+                    S/ {price % 1 === 0 ? price + '.00' : price.toFixed(2)}
+                </p>
+                <p class="font-bold text-currencyDiscount text-base">
+                    {discount
+                        ? ' - ' + (price - (price * discount) / 100).toFixed(2)
+                        : ''}
+                </p>
+            </>
+        ) : (
+            <p
+                class={`text-center font-bold ${
+                    discount ? 'text-currencyDiscount' : 'text-currency'
+                }`}
+            >
+                S/{' '}
+                {discount
+                    ? (price - (price * discount) / 100).toFixed(2)
+                    : price.toFixed(2)}
+            </p>
+        )
+    }
 </section>
