--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -14,7 +14,7 @@ const navItems: Array<NavItem> = [
 
 <header
   id="page-header"
-  class="text-defaul fixed bottom-auto top-0 z-20 flex w-full items-center justify-between border-b border-default bg-default px-8 py-4"
+  class="text-defaul sticky bottom-auto top-0 z-30 flex w-full items-center justify-between border-b border-default bg-default px-8 py-4"
 >
   <a class="flex items-center gap-3 hover:!text-default" href="#">
     <h1 class="sr-only">Melush | Pillamas y lenceria</h1>
