--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Splash from '~/components/splash.astro';
       //Todo add when there is a new clothing collection or a seasonal event
     <Splash />
      -->
-  <main class="space-y-24 px-4 py-32 lg:px-0">
+  <main class="space-y-24 px-4 pb-32 pt-16 lg:px-0">
     <Catalogue />
     <Contact />
   </main>
