--- a/src/pages/item/image-grid.astro
+++ b/src/pages/item/image-grid.astro
@@ -1,6 +1,8 @@
 ---
+import type { ImageUrl } from '~/types';
+
 export interface Props {
-    images: string[];
+    images: ImageUrl[];
 }
 
 const { images } = Astro.props;
@@ -14,8 +16,8 @@ const sliceImage = images == undefined ? [] : images.slice(1, 5);
             {
                 images && (
                     <img
-                        src={`https://raw.githubusercontent.com/melushclothes/website/main/src/assets/clothes/${images[0]}.webp`}
-                        alt={`Image ${0}`}
+                        src={images[0].url}
+                        alt={`Image ${images[0].order}`}
                         class="aspect-square h-auto w-full object-cover lg:rounded-lg"
                     />
                 )
@@ -24,8 +26,8 @@ const sliceImage = images == undefined ? [] : images.slice(1, 5);
         {
             sliceImage.map((image, index) => (
                 <img
-                    src={`https://raw.githubusercontent.com/melushclothes/website/main/src/assets/clothes/${image}.webp`}
-                    alt={`Image ${index + 1}`}
+                    src={image.url}
+                    alt={`Image ${image.order}`}
                     class="aspect-square h-auto w-full object-cover lg:rounded-lg"
                 />
             ))
