--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -6,6 +6,7 @@ import type { NavItem } from '~/types';
 const navItems: Array<NavItem> = [
   { title: 'Catálogo', url: '/#catalogue' },
   { title: 'Contacto', url: '/#contact' },
+  { title: 'Tiendas', url: '/stores' },
 ];
 
 // old class for header when splash is active
