--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,7 @@ import '~/styles/index.css';
         <!-- Make available once english is ready -->
         <!-- <link rel="alternate" href="https://www.melushstore.com/en" hreflang="en-us" /> -->
         <link rel="canonical" href="http://www.melushstore.com/" />
+        <link rel="sitemap" href="/sitemap-index.xml" />
 
         <!-- social media -->
         <meta
